# ray-plat

./: .gitignore  CMakeLists.txt
src/: main.cpp
